# HolidaysApp-Backend/driving/api-rest/src/main/java/com/rob/driving/controllers/adapters/HolidayControllerAdapter.java
@@ -3,13 +3,11 @@ package com.rob.driving.controllers.adapters;
 import com.rob.application.ports.driving.HolidayServicePort;
 import com.rob.driving.api.HolidaysApi;
 import com.rob.driving.dtos.HolidayDTO;
+import com.rob.driving.dtos.HolidayRequestDTO;
 import com.rob.driving.mappers.HolidayDTOMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
@@ -27,5 +25,12 @@ public class HolidayControllerAdapter implements HolidaysApi {
                 .map(holidayDTOMapper::toHolidayDTO)
                 .toList();
         return ResponseEntity.ok(holidays);
+    }
+
+    @PostMapping
+    public ResponseEntity<HolidayDTO> addHoliday(@RequestBody HolidayRequestDTO holidayRequestDTO) {
+        return ResponseEntity.ok(holidayDTOMapper.toHolidayDTO(
+                holidayServicePort.addHoliday(holidayDTOMapper.toHoliday(holidayRequestDTO))
+        ));
     }
 }
